# appointment-manager-client

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
appointment/: CMakeLists.txt
appointment/config/: config.hpp.in
appointment/src/app/: main.cpp
cmake/: AddDocumentation.cmake  AddExecutable.cmake  AddLibrary.cmake  AddTest.cmake  PostProject.cmake  PreProject.cmake  ShiftFindHeader.cmake  ShiftFindLibrary.cmake  Toolchain-x86_64-linux-libstdc++.cmake  Toolchain-x86_64-windows-vc143.cmake  UpdateBuildVersion.cmake  UtilityMacros.cmake
dependencies/pip/: rpds_py-0.13.2-cp311-none-win_amd64.whl
dependencies/vcpkg_ports/: .gitignore
dependencies/vcpkg_triplets/: x64-linux-none-libstdc++-impl.cmake  x64-linux-none-libstdc++.cmake  x64-windows-none-vc143.cmake  x64-windows-none_asan-vc143-impl.cmake  x64-windows-none_asan-vc143.cmake
scripts/: .gitignore  breakpad-process-binary.sh  cmake.cmd  cmake.py  cmake.sh  cmake_menu.py  config-base.json  config-overlay-address-sanitizer.json  config-overlay-skip-toolset-version-check.json  config-target-x86_64-linux-clang.json  config-target-x86_64-linux-gcc.json  config-target-x86_64-windows-vc143.json  config-user-buildserver.json  config.schema.json  exclude-build-folder-from-windows-defender.cmd  python_download.cmd  python_requirements.txt  query_config.py
src/: main.cpp
